# Den

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install  install.sh  uninstall  uninstall.sh  update  update.sh
.github/workflows/: cmake.yml
devenv.proj/inc/: CMakeLists.txt  Domptero.hpp
devenv.proj/src/: devenv.cpp
devenv/inc/: Domptero.hpp
devenv/src/: CMakeLists.txt  devenv.cpp
